...
            android:tint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_items"
        android:layout_width="560dp"
        android:layout_height="360dp"
        android:choiceMode="singleChoice"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button_add_cart"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:textSize="20sp" />

...
